# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import authRouter from "./auth";
 import productsRouter from "./products";
 import cartRouter from "./cart";
+import favoritesRouter from "./favorites";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(authRouter);
 router.use(productsRouter);
 router.use(cartRouter);
+router.use(favoritesRouter);
 
 export default router;
