# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./users";
 export * from "./products";
 export * from "./cartItems";
+export * from "./favorites";
